# sanger-designer

./: .gitignore  README.md  pyproject.toml
src/sanger_designer/: __init__.py  cli.py  core.py  defaults.py  diagnostics.py  gui.py
