[project]
name = "sanger-designer"
version = "0.1.0"
description = "CLI primer designer for circular plasmid Sanger sequencing depth."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "plotly>=6.8.0",
    "primer3-py>=2.2.0",
    "streamlit>=1.58.0",
]

[project.scripts]
sanger-designer = "sanger_designer.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

